2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-element-transform.txt:
	Update docs.

2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* plugins/elements/gstqueue.c: (gst_queue_init),
	(gst_queue_acceptcaps):
	Add and use a custom acceptcaps function instead of falling back to the
	potentially less optimized default implementation.

2008-07-29  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstpad.c: (gst_pad_alloc_buffer_full):
	  Only sanity-check the buffer size if requested_caps == buffer_caps
	  (ie. don't take pad caps into account, they're not relevant here)

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gsttee.c:
	* plugins/elements/gsttee.h:
	  Reverting as not everything is clear yet. Needs some general design
	  work.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  ChangeLog surgery for tee commit.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-sections.txt:
	  Cleanup section-file.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gsttee.c:
	* plugins/elements/gsttee.h:
	  Relay tag events in tee. Fixes parts of #474016.
	  Downgrades 3 reoccurring debugs to log.

2008-07-28  Michael Smith <msmith@songbirdnest.com>

	* configure.ac:
	* libs/gst/Makefile.am:
	  Build the net library if we have winsock2.

2008-07-26  Stefan Kost  <ensonic@users.sf.net>

	patch by: Luc Pionchon <luc.pionchon@nokia.com>

	* docs/manual/advanced-threads.xml:
	* docs/manual/diagrams-pipelines.svg:
	* docs/manual/hello-world.png:
	* docs/manual/linked-elements.png:
	* docs/manual/mime-world.png:
	* docs/manual/queue.png:
	* docs/manual/thread-buffering.png:
	* docs/manual/thread-synchronizing.png:
	  Replace one diagram with two separate ones and updates others.
	  Fixes #542401.

2008-07-25  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstelement.h:
	Fix link in documentation.

2008-07-24  Thijs Vermeir  <thijsvermeir@gmail.com>
